--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ lerna-debug.log*
 
 # OS
 .DS_Store
-
 # Tests
 /coverage
 /.nyc_output
@@ -33,3 +32,4 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+ ./sqlserver-data
