--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
 version: '3'
 services:
-  postgres-db:
-    env_file:
-      - ./back/.env
-    image: postgres:16.0
-    restart: always
-    volumes:
-      - ./postgres/:/var/lib/postgresql/data
+  db:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    container_name: sqlserver
     ports:
-      - 5432:5432
-    networks:
-      - my_network
+      - '1433:1433'
+    environment:
+      ACCEPT_EULA: 'Y'
+      MSSQL_SA_PASSWORD: 'root.123'
+    volumes:
+      - sqlserver-data:/var/opt/mssql
+    mem_limit: 4g
+    mem_reservation: 2g
 
   backend:
     depends_on:
@@ -20,8 +21,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - '5000:5000'
-    env_file:
-      ./.env
+    env_file: ./.env
 
-  
- 
+volumes:
+  sqlserver-data:
+    driver: local
