--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "migration:generate": "sequelize-cli migration:generate  --name",
+    "migration:up": "sequelize-cli db:migrate ",
+    "migration:down": "sequelize-cli db:migrate:undo",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -33,6 +36,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
     "sequelize-typescript": "^2.1.6",
     "tedious": "^18.6.1",
     "typeorm": "^0.3.19"
