--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+DB_DIALECT=
 
-# Configuración para la base de datos PostgreSQL
-DB_USER=usuario_postgres
-DB_PASSWORD=contraseña_segura
-DB_NAME=nombre_basededatos
-DB_PORT=5432
 
 # Configuración para la aplicación NestJS
-PORT=3000
-NODE_ENV=development
-
+PORT=
+NODE_ENV=
+JWT_SECRET=
