--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,6 +25,7 @@ services:
     restart: always
     volumes:
       - ./src:/usr/src/app/src
+      - /usr/src/app/node_modules
     env_file:
       ".env"
     ports:
